Fix grid spacing for bingo mode

--- a/src/app/content/classement/classement-edit.component.scss
+++ b/src/app/content/classement/classement-edit.component.scss
@@ -656,7 +656,8 @@ span.group-options {
     .elements > div {
         --border: var(--over-item-border) * 2 + var(--over-item-padding) * 2 + var(--over-item-margin) * 2;
         width: calc(var(--over-item-width) + var(--border));
-        max-width: calc(var(--over-item-width) + var(--border));
+        max-width: calc(var(--over-item-width) + var(--border)) +
+            calc(var(--over-item-width) + var(--border) + var(--over-drop-list-border-size) * 2);
         height: calc(var(--over-item-height) + var(--border));
         max-height: calc(var(--over-item-height) + var(--border));
     }
